# OpenHand-Simulator

./: .gitignore  .project  CMakeLists.txt  README  agarre.txt  package.xml  setup.py  setup_lib.py
env/hands/: armarIII.robot.xml  barretthand.robot.xml  bruno_modelo_b.robot.xml  bruno_modelo_t.robot.xml  devalhand.robot.xml  flexyhand.robot.xml  mano_imma.robot.xml  mano_imma_lite.robot.xml  michelangelohand.robot.xml  modelt.robot.xml  pr2hand.robot.xml  sah_hand.robot.xml  schunk.robot.xml  tact.robot.xml
env/objects_3dnet/: avocado_poisson_000.ply  avocado_poisson_001.ply  banana_poisson_000.ply  banana_poisson_001.ply  banana_poisson_002.ply  banana_poisson_003.ply  banana_poisson_004.ply  banana_poisson_005.ply  banjo_poisson_001.ply  banjo_poisson_002.ply  binder_poisson_000.ply  binder_poisson_003.ply  binder_poisson_004.ply  boltcutter_poisson_000.ply  book_poisson_000.ply  book_poisson_001.ply  book_poisson_002.ply  book_poisson_003.ply  book_poisson_004.ply  book_poisson_005.ply  book_poisson_006.ply  book_poisson_008.ply  book_poisson_009.ply  book_poisson_010.ply  book_poisson_011.ply  book_poisson_012.ply  book_poisson_014.ply  book_poisson_015.ply  book_poisson_019.ply  book_poisson_022.ply  book_poisson_023.ply  boot_poisson_002.ply  boot_poisson_004.ply  boot_poisson_005.ply  boot_poisson_006.ply  bottle_new_poisson_000.ply  bottle_poisson_000.ply  bottle_poisson_003.ply  bottle_poisson_004.ply  bottle_poisson_005.ply  (+616 more)
env/objects_ai/: book.stl  bottleCap.stl  card.stl  coffeCup.stl  disk.stl  golfBall.stl  miniDisk.stl  (+8 more)
matlab/: TestPostureGui.m
(+447 files in other folders)
